@@ -8,7 +8,7 @@ DIST mesa-7.3-gentoo-patches-01.tar.bz2 34342 RMD160 547e3d1e8a72cd7df13bf699c18
 DIST mesa-7.4.1-gentoo-patches-01.tar.bz2 3727 RMD160 8df6389bc867a1f3892e038e12fcb285d063b6a4 SHA1 5521f884503004f90c0211fa1c6abbe54a3c4243 SHA256 d39052d8a75f45f07af85b9f50852ac3596e90296b8afbe6a71d42bd74caaa79
 EBUILD mesa-7.3-r1.ebuild 7233 RMD160 6a1a6159d56c5fd30c0742fcac8f38148e40b2e8 SHA1 aaa80f1ed1c4490a34c8ef258b31754da98ffe18 SHA256 74e64cd16b45b123f2692503e595771ced2c383a2c206574891f0bc870ef2d69
 EBUILD mesa-7.3.ebuild 7070 RMD160 44edb447490095141a2f90f12958c36f8f358dcf SHA1 f541757111b08be15429ca8795ca3a2a3068b901 SHA256 f0dc6df34b40c8fdfb6f7ec4ce86aa1af2e63f786e4b44dfb9a440423981caaa
-EBUILD mesa-7.4.1-r01.1.ebuild 7843 RMD160 60aeff77d560efba076efc07b783844a7401e0d3 SHA1 57823bc366c0de467fde3dbb2d72f6d8d090b9f7 SHA256 ce8c8e0158ca39ec9e1e3180fa51d7e51c7900f4e27b1d062b8f7e70218a7805
+EBUILD mesa-7.4.1-r01.1.ebuild 7868 RMD160 ba294fbde1b4ac20bfbc7aee7427e850d190ca08 SHA1 f7b0dad3ad209fe53950699786ed2b7600c11b3b SHA256 d9f3f96847f4ce5d5171574b687eb0cd9be0822b64f09f8fbc67a9c6af142ae8
 EBUILD mesa-7.4.ebuild 7422 RMD160 67a3c78f0b75a73fd52b711fe30e082d5f0bfbda SHA1 7fc32b4b941a30833c30273c292d70d56802f96e SHA256 ceed1038329f75ed2f36f1b5c578352b7ea558edd3950d617bab57da33cfa0f5
-MISC ChangeLog 38166 RMD160 e080170fb57cdefe31aa51f6488e09e07f920548 SHA1 619f6f2861cca9ea046ebb106ba1f337e7da1ff0 SHA256 d7aeedcfdc06b59332609d5c580973b0e5ea96d2bc30a0ab95e123b02eb6b8a8
+MISC ChangeLog 38489 RMD160 7d6c01e8c31bc1ea7e6569d4a1c4964e999857a7 SHA1 7856ddd80b278238cbf2f9cf9d5c53bc28019e68 SHA256 50990ee91949c2d7bf936631db5166862630a4bc993c12a2167d43b37a9e2099
 MISC metadata.xml 251 RMD160 e6e718c1f8c8ab33331fcdc2ed16dc7da35d04aa SHA1 a753e5190a6008a77db021b70d5962cbc2e9e488 SHA256 689bc8ac5839e4eb6173899024bf1f6169a5d3f3a1e82e4cdd80011e3e43a8de
